--- a/404.html
+++ b/404.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/">
     <script>
+      // 這樣會將所有 URL 重新導向到 index.html，並讓 Vue Router 處理
       var path = window.location.pathname;
       if (path !== "/" && path !== "/index.html") {
-        window.location.replace("/#" + path);
+        window.location.replace(path);
       }
     </script>
   </head>
