--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/">
     <script>
-      // 這樣會將所有 URL 重新導向到 index.html，並讓 Vue Router 處理
+      // 檢查是否為靜態路徑（例如 /about），如果是，重導向到 index.html
       var path = window.location.pathname;
-      if (path !== "/" && path !== "/index.html") {
-        window.location.replace(path);
+      if (path !== "/" && !path.startsWith("/index.html")) {
+        window.location.replace("/");
       }
     </script>
   </head>
