--- a/404.html
+++ b/404.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/">
     <script>
-      // 檢查是否為靜態路徑（例如 /about），如果是，重導向到 index.html
+      // 如果是 /about 這類路徑，直接將請求交給 Vue Router 處理
       var path = window.location.pathname;
-      if (path !== "/" && !path.startsWith("/index.html")) {
-        window.location.replace("/");
+      if (path !== "/") {
+        // 這裡會把 URL 重定向到正確的路由，並由 Vue Router 處理
+        window.location.replace(path);
       }
     </script>
   </head>
