--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script>
       var path = window.location.pathname;
       if (path !== "/" && path !== "/index.html") {
-        window.location.replace("/" + path);
+        window.location.replace("/#" + path);
       }
     </script>
   </head>
